--- a/scss/main.scss
+++ b/scss/main.scss
@@ -73,8 +73,195 @@
 //   color: map-get($alert, 'success');
 // }
 
-// ! mixin
-@include
-@mixin name {
-    
+// ! mixin @ import
+// @import 'modules/mixin', 'modules/header', 'modules/container', 'modules/footer';
+
+// ! use
+
+// @use 'modules/sub-modules/mixin';
+// @use 'modules/header';
+// @use 'modules/container';
+// @use 'modules/footer';
+
+// ! flow control
+// body {
+//   min-height: 1000px;
+// }
+
+// ? if
+// @mixin profile-pic($size, $circle: false) {
+//   width: $size;
+//   height: $size;
+//   border: 5px solid white;
+//   box-shadow: 1px 1px 3px rgba($color: #000, $alpha: 0.3);
+//   @if $circle {
+//     border-radius: 50%;
+//   }
+// }
+// .square-profile {
+//   @include profile-pic(200px, $circle: false);
+// }
+// .circle-profile {
+//   @include profile-pic(80px, $circle: true);
+// }
+// ? else
+// $light-bg: #eaeaea;
+// $light-text: #333;
+// $dark-bg: #999;
+// $dark-text: #ddd;
+
+// @mixin color-mode($light-mode: true) {
+//   @if $light-mode {
+//     background-color: $light-bg;
+//     color: $light-text;
+//   } @else {
+//     background-color: $dark-bg;
+//     color: $dark-text;
+//   }
+// }
+
+// .nav {
+//   @include color-mode($light-mode: false);
+// }
+// ? else if
+// @mixin triangle($size, $color, $direction) {
+//   width: 0;
+//   height: 0;
+//   border-color: transparent;
+//   border-style: solid;
+//   border-width: $size/2;
+//   @if $direction == up {
+//     border-bottom-color: $color;
+//   } @else if $direction == right {
+//     border-left-color: $color;
+//   } @else if $direction == down {
+//     border-top-color: $color;
+//   } @else {
+//     border-left-color: $color;
+//   }
+// }
+
+// .right {
+//   @include triangle(2em, black, right);
+// }
+// ? for
+// $color: blue;
+// .gradient {
+//   margin: 0;
+//   padding: 0;
+//   list-style: none;
+//   @for $i from 1 to 11 {
+//     li:nth-child(#{$i}) {
+//       padding: 4px;
+//       background-color: lighten($color, $i * 5%);
+//     }
+//   }
+// }
+// ? while
+// $color: salmon;
+// .gradient {
+//   margin: 0;
+//   padding: 0;
+//   list-style: none;
+//   $i: 1;
+//   @while $i < 11 {
+//       li:nth-child(#{$i}) {
+//         padding: 4px;
+//         background-color: lighten($color, $i * 2%);
+//       }
+//       $i: $i + 1;
+//   }
+// }
+// ? each
+// $social-colors: (
+//   youtube: black,
+//   facebook: salmon,
+//   instagram: purple,
+// );
+
+// .socials {
+//   font-size: 2em;
+//   font-family: Arial, Helvetica, sans-serif;
+//   font-weight: bold;
+//   @each $social, $color in $social-colors {
+//     .#{$social} {
+//       color: $color;
+//     }
+//   }
+// }
+// ! built-in modules / function
+// ? color
+// https://sass-lang.com/documentation/modules
+$warna-dasar: salmon;
+h1 {
+  color: $warna-dasar;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 3em;
+}
+// * adjust-color(
+//     $color,
+//     $red: null,
+//     $green: null,
+//     $blue: null,
+//     $hue: null,
+//     $saturation: null,
+//     $lightness: null,
+//     $whiteness: null,
+//     $blackness: null,
+//     $alpha: null
+//   );
+
+
+// h1 {
+//   color: adjust-color(
+//     $color: $warna-dasar,
+//     $green: 100,
+//     $blue: 100,
+//     $red: -50
+//   );
+// }
+
+// * adjust-hue($color, $degree);
+// h1 {
+//   color: adjust-hue($color: $warna-dasar, $degrees: 30deg); // berputar ke atas
+// }
+
+// * complement($color)
+// h1{
+//   color: complement($color: $warna-dasar); // sebrang putaran warna
+// }
+
+// * darken($color, $amount)
+// h1{
+//   color: darken($color: $warna-dasar, $amount: 70%);
+// }
+// lighten($color, $amount)
+// h1{
+//   color: lighten($color: $warna-dasar, $amount: 20%);
+// }
+
+// * saturate // murnikan warna
+// h1 {
+//   color: saturate($color: $warna-dasar, $amount: 0%);
+// }
+// desaturate // ngilangin warna jadi abu
+// h1 {
+//   color: desaturate($color: $warna-dasar, $amount: 50%);
+// }
+
+// * greyscale($color) // desaturate 100%
+
+// * mix($color1, $color2, $weight: 50%)
+// h1{
+//   color: mix($warna-dasar, blue, $weight: 50%)
+// }
+
+// * fade-in transparansi tambah 0.5
+h1{
+  color: fade-in($color: rgba(250,128,114, 0.2), $amount: 0.5);
+}
+
+// * fade-out transparansi kurang 0.5
+h1{
+  color: fade-out($color: $warna-dasar, $amount: 0.5);
 }
