--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,13 @@
+h1 {
+  color: salmon;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 3em;
+}
 
+h1 {
+  color: rgba(250, 128, 114, 0.7);
+}
+
+h1 {
+  color: rgba(250, 128, 114, 0.5);
+}/*# sourceMappingURL=main.css.map */
